--- a/app/static/css/output.css
+++ b/app/static/css/output.css
@@ -10880,6 +10880,10 @@ html:has(.drawer-open.drawer-open) {
 }
 
 @media (min-width: 768px) {
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
