--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Wood Analytics {% endblock %}</title>
-    <link href="/static/css/output.css" rel="stylesheet">
+    <link href="/static/css/output.css?v={{ build_id }}" rel="stylesheet">
 </head>
 <body class="min-h-screen flex flex-col">
     <!-- DaisyUI Top Bar Navbar -->
